--- a/unbalanced/scen_new/SXC_Storm_Castle_Beta.cfg
+++ b/unbalanced/scen_new/SXC_Storm_Castle_Beta.cfg
@@ -811,7 +811,7 @@ You have to defeat all enemy Leaders. You start with only one unit, but you can 
 [event]
 name=turn 10
 
-{SXC_ENEMY_BOSS RED_POTION 1 40 29 "Goblin Pillager" 5 0 201 2 13 3 14 0 BLANK BLANK BLANK BLANK}
+{SXC_ENEMY_BOSS RED_POTION 1 40 29 "Saurian Oracle" 5 0 201 2 13 3 14 0 BLANK BLANK BLANK BLANK}
 {SXC_ENEMY_BOSS RED_POTION 1 04 29 "Dwarvish Runemaster" 8 -1 175 2 6 3 6 0 RC MC BLANK BLANK}
 {SXC_ENEMY_BOSS BLUE_POTION 1 22 29 "Elder Mage" 6 0 195 3 12 1 6 0 RB BLANK BLANK BLANK}
 {SXC_ENEMY_BOSS BLUE_POTION 1 14 29 "Spectre" 7 -1 217 1 16 2 14 0 MF RF BLANK BLANK}
