Fix scorpion spawn event (the WML [option] error)

--- a/unbalanced/scen_new/SXC_Storm_Castle_Beta.cfg
+++ b/unbalanced/scen_new/SXC_Storm_Castle_Beta.cfg
@@ -678,6 +678,7 @@ You have to defeat all enemy Leaders. You start with only one unit, but you can 
     {SXC_SET_TERRAIN 37 02 Uh}
     {SXC_SET_TERRAIN 40 24 Ur}
     {SXC_SET_TERRAIN 36 13 Ur}
+    {SXC_REDRAW_TERRAIN}
     {SXC_ENEMY_BOSS CHEST_GOLD 100 37 04 "Giant Spider" 7 0 110 2 10 2 10 30 RP BLANK BLANK BLANK}
     {SXC_ENEMY_BOSS CHEST_GOLD 100 37 05 "Giant Spider" 7 0 110 2 10 2 10 30 RP BLANK BLANK BLANK}
     {SXC_ENEMY_BOSS CHEST_GOLD 100 37 06 "Giant Spider" 7 0 110 2 10 2 10 30 RP BLANK BLANK BLANK}
@@ -685,7 +686,7 @@ You have to defeat all enemy Leaders. You start with only one unit, but you can 
     {SXC_ENEMY_BOSS CHEST_GOLD 100 37 08 "Giant Spider" 7 0 110 2 10 2 10 30 RP BLANK BLANK BLANK}    
     {SXC_ENEMY_BOSS CHEST_GOLD 100 37 09 "Giant Spider" 7 0 110 2 10 2 10 30 RP BLANK BLANK BLANK}   
     {SXC_ENEMY_GUARD_3 S castle 37 15 "Giant Scorpion" 7 0 110 2 21 2 12 100 RP BLANK BLANK BLANK}
-    {SXC_ADD_SECOND_SPECIAL 37 15 SXC_RAGE melee impact}
+    {SXC_ENEMY_GUARD_SET_SPECIALS 37 15 7 1 append {WEAPON_SPECIAL_SXC_RAGE} {BLANK}}
   [/event]
 
   [event]
