enable SXC Storm Castle Beta

--- a/_main.cfg
+++ b/_main.cfg
@@ -31,6 +31,7 @@
   {~add-ons/SXCollection/scen_def}
   {~add-ons/SXCollection/scen_gol}
   {~add-ons/SXCollection/scen_new}
+  {~add-ons/SXCollection/unbalanced/scen_new/SXC_Storm_Castle_Beta.cfg}
 #endif
   {~add-ons/SXCollection/eras/sxc_default_low_level_era.cfg}
   {~add-ons/SXCollection/eras/sxc_random_low_level_era.cfg}
