SXC Storm Castle scatter some dwarves to start

--- a/unbalanced/scen_new/SXC_Storm_Castle_Beta.cfg
+++ b/unbalanced/scen_new/SXC_Storm_Castle_Beta.cfg
@@ -523,6 +523,20 @@ You have to defeat all enemy Leaders. You start with only one unit, but you can 
 
     {SXC_SC_DOORSTOP 26 21 1000 6 10 15}
 
+    {SCATTER_UNITS 20 "Dwarvish Fighter,Dwarvish Guardsman,Dwarvish Ulfserker,Dwarvish Thunderer" 1 (
+      terrain=Rr
+      x=18-20
+      y=4-26
+      [not]
+        [filter]
+        [/filter]
+      [/not]
+    ) (
+      side=9
+      generate_name=yes
+      random_traits=yes
+      )}
+
     {SCATTER_UNITS 9 "Elvish Avenger" 1 (
       terrain=Gs^Fp,Hh^Fp
       x=39-44
