SXC Calculate terrains after final advancement, if enough xp to level up again
While debugging, I was adding xp and causing units to level twice, this caused
errors from [unstore_unit] saying that unit_mc didn't contain unit data. IIUC,
the second advancement occurred during the unstore_unit for the first
advancement, and cleared unit_mc.

This is probably not going to happen in a normal game, but it pointed me to
other cleanup. The "advance" and "post_advance" events already have built in
unit filters, so use them via $unit instead of having to do an extra store.

This fix would also handle a unit levelling more than 2 times.

--- a/macros/SXCmacros.cfg
+++ b/macros/SXCmacros.cfg
@@ -314,19 +314,21 @@
       canrecruit=yes
       x,y=$x1,$y1
     [/filter]
-    [store_unit]
-      [filter]
-        team_name=Heroes
-        x,y=$x1,$y1
-        canrecruit=yes
-      [/filter]
-      variable=preadvance
-    [/store_unit]
-    {VARIABLE pre_advance $preadvance.hitpoints}
-    {VARIABLE pre_id $preadvance.type}
-    {CLEAR_VARIABLE preadvance}
+    [if]
+      # pre_id is cleared in the post_advance event, except for the situation
+      # when a unit gets enough xp to level up twice
+      {SXC_CMP pre_id equals ""}
+      [then]
+        {VARIABLE pre_advance $unit.hitpoints}
+        {VARIABLE pre_id $unit.type}
+      [/then]
+    [/if]
   [/event]
 
+  # This event triggers after a hero advances, unless they're going to
+  # immediately level up again. If a single kill gives a hero enough xp to go
+  # up two levels, then the formula in the filter means it only triggers on the
+  # second advancement.
   [event]
     name=post_advance
     first_time_only=no
@@ -334,15 +336,8 @@
       x,y=$x1,$y1
       team_name=Heroes
       canrecruit=yes
+      formula="experience < max_experience"
     [/filter]
-    [store_unit]
-      [filter]
-        team_name=Heroes
-        canrecruit=yes
-        x,y=$x1,$y1
-      [/filter]
-      variable=postadvance
-    [/store_unit]
     [object]
       silent=yes
       duration=forever
@@ -354,9 +349,9 @@
       {SXC_TRAIT_EFFECTS}
     [/object]
     [if]
-      {SXC_CMP pre_advance greater_than $postadvance.hitpoints}
+      {SXC_CMP pre_advance greater_than $unit.hitpoints}
       [then]
-        {VARIABLE_OP pre_advance sub $postadvance.hitpoints}
+        {VARIABLE_OP pre_advance sub $unit.hitpoints}
         [object]
           silent=yes
           duration=forever
@@ -369,16 +364,15 @@
       [/then]
     [/if]
     [if]
-      {SXC_CMP pre_id not_equals $postadvance.type}
+      {SXC_CMP pre_id not_equals $unit.type}
       [then]
-        {SXC_CHECK_ARMOR_TOTAL $postadvance.side}
-        {SXC_UNIT_MOVEMENTS_RESTORE $postadvance.side}
+        {SXC_CHECK_ARMOR_TOTAL $unit.side}
+        {SXC_UNIT_MOVEMENTS_RESTORE $unit.side}
       [/then]
     [/if]
-#     {SXC_DISALLOW_RECRUITS $postadvance.side}
+#     {SXC_DISALLOW_RECRUITS $unit.side}
     {CLEAR_VARIABLE pre_advance}
     {CLEAR_VARIABLE pre_id}
-    {CLEAR_VARIABLE postadvance}
   [/event]
 #enddef
 
