SXC Add an option to train both melee and ranged (damage is 25g / 110g for +5)
The localized text gets a bit more hacky, as it now assumes that
"..." doesn't need to be localized.

--- a/macros/SXCmacros.cfg
+++ b/macros/SXCmacros.cfg
@@ -1969,15 +1969,26 @@ until you will leave selected shop section.</span>
                 {VARIABLE dmg_price_ranged 20}
                 {VARIABLE dmg_price_5ranged 90}
             [/case]
+            [case]
+              value="both_melee_and_ranged"
+                {VARIABLE_OP str_price_melee multiply 1.2}
+                {VARIABLE_OP str_price_3melee multiply 1.2}
+                {VARIABLE_OP str_price_ranged multiply 1.2}
+                {VARIABLE_OP str_price_3ranged multiply 1.2}
+                {VARIABLE dmg_price_melee 25}
+                {VARIABLE dmg_price_5melee 110}
+                {VARIABLE dmg_price_ranged 25}
+                {VARIABLE dmg_price_5ranged 110}
+            [/case]
             [else]
               # sxc_attack_specialization_$side_number is "none"
 
-              # The lua code does a rough translation of "Melee or ranged" using core Wesnoth's translated strings
+              # The lua code does a rough translation of "Melee, ranged or ..." using core Wesnoth's translated strings
               [lua]
                   code=<<
                       local _ = wesnoth.textdomain "wesnoth"
                       local empty_str = ""
-                      local ranges = { _ "melee", _ "ranged" }
+                      local ranges = { _ "melee", _ "ranged", "..." }
                       wesnoth.set_variable ("sxc_l10n_header", wesnoth.format_disjunct_list(empty_str, ranges))
                   >>
               [/lua]
@@ -1985,6 +1996,7 @@ until you will leave selected shop section.</span>
 Before you will be able to buy damage and strikes training, you must choose
 which range training you will focus on.  The other range will be much more
 expensive to improve, it will cost the double price of the selected range.
+If you want to train both, all training will be a bit more expensive
 "}
               {CLEAR_VARIABLE sxc_l10n_header}
             [/else]
@@ -2401,6 +2413,15 @@ $choose_range|<span color='#E0E018'>Gold: $gold|</span>
                     {VARIABLE_OP ranged_strikes_gold add $str_price_3ranged}
                   [/then]
                 [/if]
+              [/command]
+            [/option]
+            [option]
+              [show_if]
+                {SXC_CMP sxc_attack_specialization_$side_number equals "none"}
+              [/show_if]
+              message={MENU_IMG_TXT "icons/damage-both.png" "<span color='#FF2020'>I want to train both melee and ranged</span>"}
+              [command]
+                {VARIABLE sxc_attack_specialization_$side_number "both_melee_and_ranged"}
               [/command]
             [/option]
             [option]
