--- a/macros/SXC_items.cfg
+++ b/macros/SXC_items.cfg
@@ -16,278 +16,26 @@
         {SXC_CMP item[$i|].y numerical_equals $y1}
         {SXC_CMP item[$i|].used numerical_equals 0}
         [then]
+          {VARIABLE item_found yes}
+          {VARIABLE item_index $i}
           [if]
-            {SXC_CMP item[$i|].type contains "CHEST_GOLD"}
+            {SXC_CMP item[$i|].type contains "chest_gold"}
             [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
               [fire_event]
-                name=chest_gold_found
+                name=sxc_found_chest_gold
                 [primary_unit]
                   x,y=$x1,$y1
                 [/primary_unit]
               [/fire_event]
             [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "DEFRING"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
+            [else]
               [fire_event]
-                name=defring_found
+                name=sxc_found_$item[$i|].type|
                 [primary_unit]
                   x,y=$x1,$y1
                 [/primary_unit]
               [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "RESRING"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=resring_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "BLUE_POTION"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=blue_potion_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "CYAN_POTION"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=cyan_potion_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "RED_POTION"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=red_potion_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "YELLOW_POTION"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=yellow_potion_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "TARGET"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=target_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "CORNUCOPIA"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=cornucopia_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "SCEPTRE"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=sceptre_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "SWORD"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=sword_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "BOW"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=bow_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "NECKLACE"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=necklace_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "ICEARMOR"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=icearmor_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "FIREARMOR"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=firearmor_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "SPIRITSTAFF"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=spiritstaff_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "BUCKLER"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=buckler_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "BARREL"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=barrel_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "DWARFPLATE"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=dwarfplate_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "RINGDARKNESS"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=ringdarkness_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
-          [/if]
-          [if]
-            {SXC_CMP item[$i|].type equals "CLOAK"}
-            [then]
-              {VARIABLE item_found yes}
-              {VARIABLE item_index $i}
-              [fire_event]
-                name=cloak_found
-                [primary_unit]
-                  x,y=$x1,$y1
-                [/primary_unit]
-              [/fire_event]
-            [/then]
+            [/else]
           [/if]
         [/then]
       [/if]
@@ -327,12 +75,12 @@
 #enddef
 
 #define SXC_RESRING X Y
-  {SXC_ITEM {X} {Y} "RESRING" "items/ring-white.png" ""}
+  {SXC_ITEM {X} {Y} "resring" "items/ring-white.png" ""}
 #enddef
 
 #define SXC_RESRING_EVENT
   [event]
-    name=resring_found
+    name=sxc_found_resring
     first_time_only=no
     [message]
       image=items/ring-white.png
@@ -435,12 +183,12 @@ Currently you have $resring_$side_number||"
 #enddef
 
 #define SXC_YELLOW_POTION X Y
-  {SXC_ITEM {X} {Y} "YELLOW_POTION" "items/potion-yellow.png" ""}
+  {SXC_ITEM {X} {Y} "yellow_potion" "items/potion-yellow.png" ""}
 #enddef
 
 #define SXC_YELLOW_POTION_EVENT
   [event]
-    name=yellow_potion_found
+    name=sxc_found_yellow_potion
     first_time_only=no
     [message]
       image=items/potion-yellow.png
@@ -610,12 +358,12 @@ hero, select View inventory... and then select 'Drink yellow potion'."
 #enddef
 
 #define SXC_RED_POTION X Y
-  {SXC_ITEM {X} {Y} "RED_POTION" "items/potion-red.png" ""}
+  {SXC_ITEM {X} {Y} "red_potion" "items/potion-red.png" ""}
 #enddef
 
 #define SXC_RED_POTION_EVENT
   [event]
-    name=red_potion_found
+    name=sxc_found_red_potion
     first_time_only=no
     [message]
       image=items/potion-red.png
@@ -764,12 +512,12 @@ hero, select View inventory... and then select 'Drink red potion'."
 #enddef
 
 #define SXC_BLUE_POTION X Y
-  {SXC_ITEM {X} {Y} "BLUE_POTION" "items/potion-blue.png" ""}
+  {SXC_ITEM {X} {Y} "blue_potion" "items/potion-blue.png" ""}
 #enddef
 
 #define SXC_BLUE_POTION_EVENT
   [event]
-    name=blue_potion_found
+    name=sxc_found_blue_potion
     first_time_only=no
     [message]
       image=items/potion-blue.png
@@ -935,12 +683,12 @@ hero, select View inventory... and then select 'Drink blue potion'."
 #enddef
 
 #define SXC_CYAN_POTION X Y
-  {SXC_ITEM {X} {Y} "CYAN_POTION" "items/potion-cyan.png" ""}
+  {SXC_ITEM {X} {Y} "cyan_potion" "items/potion-cyan.png" ""}
 #enddef
 
 #define SXC_CYAN_POTION_EVENT
   [event]
-    name=cyan_potion_found
+    name=sxc_found_cyan_potion
     first_time_only=no
     [message]
       image=items/potion-cyan.png
@@ -1083,12 +831,12 @@ hero, select View inventory... and then select 'Drink cyan potion'."
 #enddef
 
 #define SXC_CHEST_GOLD X Y AMOUNT
-  {SXC_ITEM {X} {Y} "CHEST_GOLD,{AMOUNT}" "items/chest-plain-closed.png" ""}
+  {SXC_ITEM {X} {Y} "chest_gold,{AMOUNT}" "items/chest-plain-closed.png" ""}
 #enddef
 
 #define SXC_CHEST_GOLD_EVENT
   [event]
-    name=chest_gold_found
+    name=sxc_found_chest_gold
     first_time_only=no
     [set_variables]
       [split]
@@ -1214,12 +962,12 @@ Remaining $remainder gold gained player $side_number"}
 #enddef
 
 #define SXC_DEFRING X Y
-  {SXC_ITEM {X} {Y} "DEFRING" "items/ring-gold.png" ""}
+  {SXC_ITEM {X} {Y} "defring" "items/ring-gold.png" ""}
 #enddef
 
 #define SXC_DEFRING_EVENT
   [event]
-    name=defring_found
+    name=sxc_found_defring
     first_time_only=no
     [message]
       image=items/ring-gold.png
@@ -1333,12 +1081,12 @@ Currently you have $defring_$side_number||"
 #enddef
 
 #define SXC_TARGET X Y
-  {SXC_ITEM {X} {Y} "TARGET" "items/archery-target-right.png" ""}
+  {SXC_ITEM {X} {Y} "target" "items/archery-target-right.png" ""}
 #enddef
 
 #define SXC_TARGET_EVENT
   [event]
-    name=target_found
+    name=sxc_found_target
     first_time_only=no
     [message]
       image=items/archery-target-right.png
@@ -1426,12 +1174,12 @@ Currently you have $defring_$side_number||"
 #enddef
 
 #define SXC_NECKLACE X Y
-  {SXC_ITEM {X} {Y} "NECKLACE" "items/ankh-necklace.png" ""}
+  {SXC_ITEM {X} {Y} "necklace" "items/ankh-necklace.png" ""}
 #enddef
 
 #define SXC_NECKLACE_EVENT
   [event]
-    name=necklace_found
+    name=sxc_found_necklace
     first_time_only=no
     [message]
       image=items/ankh-necklace.png
@@ -1519,12 +1267,12 @@ Currently you have $defring_$side_number||"
 #enddef
 
 #define SXC_ICEARMOR X Y
-  {SXC_ITEM {X} {Y} "ICEARMOR" "items/armor.png" ""}
+  {SXC_ITEM {X} {Y} "icearmor" "items/armor.png" ""}
 #enddef
 
 #define SXC_ICEARMOR_EVENT
   [event]
-    name=icearmor_found
+    name=sxc_found_icearmor
     first_time_only=no
     [message]
       image=items/armor.png
@@ -1604,12 +1352,12 @@ Currently you have $defring_$side_number||"
 #enddef
 
 #define SXC_FIREARMOR X Y
-  {SXC_ITEM {X} {Y} "FIREARMOR" "items/armor-golden.png" ""}
+  {SXC_ITEM {X} {Y} "firearmor" "items/armor-golden.png" ""}
 #enddef
 
 #define SXC_FIREARMOR_EVENT
   [event]
-    name=firearmor_found
+    name=sxc_found_firearmor
     first_time_only=no
     [message]
       image=items/armor-golden.png
@@ -1689,12 +1437,12 @@ Currently you have $defring_$side_number||"
 #enddef
 
 #define SXC_SPIRITSTAFF X Y
-  {SXC_ITEM {X} {Y} "SPIRITSTAFF" "items/staff.png" ""}
+  {SXC_ITEM {X} {Y} "spiritstaff" "items/staff.png" ""}
 #enddef
 
 #define SXC_SPIRITSTAFF_EVENT
   [event]
-    name=spiritstaff_found
+    name=sxc_found_spiritstaff
     first_time_only=no
     [message]
       image=items/staff.png
@@ -1774,12 +1522,12 @@ Currently you have $defring_$side_number||"
 #enddef
 
 #define SXC_BUCKLER X Y
-  {SXC_ITEM {X} {Y} "BUCKLER" "items/buckler.png" ""}
+  {SXC_ITEM {X} {Y} "buckler" "items/buckler.png" ""}
 #enddef
 
 #define SXC_BUCKLER_EVENT
   [event]
-    name=buckler_found
+    name=sxc_found_buckler
     first_time_only=no
     [message]
       image=items/buckler.png
@@ -1867,12 +1615,12 @@ Currently you have $defring_$side_number||"
 #enddef
 
 #define SXC_BARREL X Y
-  {SXC_ITEM {X} {Y} "BARREL" "items/barrel.png" ""}
+  {SXC_ITEM {X} {Y} "barrel" "items/barrel.png" ""}
 #enddef
 
 #define SXC_BARREL_EVENT
   [event]
-    name=barrel_found
+    name=sxc_found_barrel
     first_time_only=no
     [message]
       image=items/barrel.png
@@ -1952,12 +1700,12 @@ Currently you have $defring_$side_number||"
 #enddef
 
 #define SXC_DWARFPLATE X Y
-  {SXC_ITEM {X} {Y} "DWARFPLATE" "items/dummy.png" ""}
+  {SXC_ITEM {X} {Y} "dwarfplate" "items/dummy.png" ""}
 #enddef
 
 #define SXC_DWARFPLATE_EVENT
   [event]
-    name=dwarfplate_found
+    name=sxc_found_dwarfplate
     first_time_only=no
     [message]
       image=items/dummy.png
@@ -2037,12 +1785,12 @@ Currently you have $defring_$side_number||"
 #enddef
 
 #define SXC_CORNUCOPIA X Y
-  {SXC_ITEM {X} {Y} "CORNUCOPIA" "items/ornate2.png" ""}
+  {SXC_ITEM {X} {Y} "cornucopia" "items/ornate2.png" ""}
 #enddef
 
 #define SXC_CORNUCOPIA_EVENT
   [event]
-    name=cornucopia_found
+    name=sxc_found_cornucopia
     first_time_only=no
     [message]
       image=items/ornate2.png
@@ -2100,12 +1848,12 @@ Currently you have $defring_$side_number||"
 #enddef
 
 #define SXC_SCEPTRE X Y
-  {SXC_ITEM {X} {Y} "SCEPTRE" "items/sceptre-of-fire.png" ""}
+  {SXC_ITEM {X} {Y} "sceptre" "items/sceptre-of-fire.png" ""}
 #enddef
 
 #define SXC_SCEPTRE_EVENT
   [event]
-    name=sceptre_found
+    name=sxc_found_sceptre
     first_time_only=no
     [message]
       image=items/sceptre-of-fire.png
@@ -2195,12 +1943,12 @@ Currently you have $defring_$side_number||"
 #enddef
 
 #define SXC_SWORD X Y
-  {SXC_ITEM {X} {Y} "SWORD" "items/flame-sword.png" ""}
+  {SXC_ITEM {X} {Y} "sword" "items/flame-sword.png" ""}
 #enddef
 
 #define SXC_SWORD_EVENT
   [event]
-    name=sword_found
+    name=sxc_found_sword
     first_time_only=no
     [message]
       image=items/flame-sword.png
@@ -2290,12 +2038,12 @@ Currently you have $defring_$side_number||"
 #enddef
 
 #define SXC_BOW X Y
-  {SXC_ITEM {X} {Y} "BOW" "items/bow-elven.png" ""}
+  {SXC_ITEM {X} {Y} "bow" "items/bow-elven.png" ""}
 #enddef
 
 #define SXC_BOW_EVENT
   [event]
-    name=bow_found
+    name=sxc_found_bow
     first_time_only=no
     [message]
       image=items/bow-elven.png
@@ -2385,12 +2133,12 @@ Currently you have $defring_$side_number||"
 #enddef
 
 #define SXC_RINGDARKNESS X Y
-  {SXC_ITEM {X} {Y} "RINGDARKNESS" "items/ring-red.png" ""}
+  {SXC_ITEM {X} {Y} "ringdarkness" "items/ring-red.png" ""}
 #enddef
 
 #define SXC_RINGDARKNESS_EVENT
   [event]
-    name=ringdarkness_found
+    name=sxc_found_ringdarkness
     first_time_only=no
     [message]
       image=items/ring-red.png
@@ -2481,12 +2229,12 @@ Currently you have $defring_$side_number||"
 
 # Fix all following items
 #define SXC_CLOAK X Y
-  {SXC_ITEM {X} {Y} "CLOAK" "items/cloak-green.png" ""}
+  {SXC_ITEM {X} {Y} "cloak" "items/cloak-green.png" ""}
 #enddef
 
 #define SXC_CLOAK_EVENT
   [event]
-    name=cloak_found
+    name=sxc_found_cloak
     first_time_only=no
     [message]
       image=items/cloak-green.png
