proof of concept: SXC shop and vision

--- a/macros/SXCmacros.cfg
+++ b/macros/SXCmacros.cfg
@@ -1942,6 +1942,7 @@ until you will leave selected shop section.</span>
           {VARIABLE four_movements_price 4}
           {VARIABLE_OP four_movements_price multiply $movement_price}
           {VARIABLE_OP four_movements_price add 15}
+          {VARIABLE vision_price 50}
           {VARIABLE str_price_melee $melee_strikes_$side_number}
           {VARIABLE_OP str_price_melee add 7}
           {VARIABLE_OP str_price_melee multiply 10}
@@ -2530,6 +2531,31 @@ $choose_range|<span color='#E0E018'>Gold: $gold|</span>
                 {VARIABLE_OP movement_upgrades_$side_number add -$movement_points}
                 {VARIABLE movement_points 0}
                 {VARIABLE movement_points_gold 0}
+                {SXC_REDRAW_TERRAIN}
+              [/command]
+            [/option]
+            [option]
+              message={MENU_IMG_TXT "icons/movement.png" "<span color='#80FF80'>$vision_price| gold: +1 Vision Point</span><span color='#FF0000'>Has bugs, stops movement increasing vision</span>"}
+              [command]
+                # note: at the the
+                [if]
+                  {SXC_CMP gold greater_than_equal_to $vision_price}
+                  [then]
+                    [gold]
+                      amount=-$vision_price
+                      side=$side_number
+                    [/gold]
+                    [object]
+                      silent=yes
+                      duration=forever
+                      [effect]
+                        apply_to=vision
+                        increase=1
+                      [/effect]
+                    [/object]
+                    {SXC_REDRAW_TERRAIN}
+                  [/then]
+                [/if]
               [/command]
             [/option]
             [option]
@@ -2568,6 +2594,7 @@ $choose_range|<span color='#E0E018'>Gold: $gold|</span>
                     {VARIABLE_OP movement_upgrades_$side_number add 1}
                     {VARIABLE_OP movement_points add 1}
                     {VARIABLE_OP movement_points_gold add $movement_price}
+                    {SXC_REDRAW_TERRAIN}
                   [/then]
                 [/if]
               [/command]
@@ -2608,6 +2635,7 @@ $choose_range|<span color='#E0E018'>Gold: $gold|</span>
                     {VARIABLE_OP movement_upgrades_$side_number add 4}
                     {VARIABLE_OP movement_points add 4}
                     {VARIABLE_OP movement_points_gold add $four_movements_price}
+                    {SXC_REDRAW_TERRAIN}
                   [/then]
                 [/if]
               [/command]
