WIP: SXC vision upgrade in the shop

--- a/macros/SXCmacros.cfg
+++ b/macros/SXCmacros.cfg
@@ -512,6 +512,7 @@
     {VARIABLE melee_strikes_$sxc_side 0}
     {VARIABLE ranged_strikes_$sxc_side 0}
     {VARIABLE movement_upgrades_$sxc_side 0}
+    {VARIABLE vision_upgrades_$sxc_side 0}
     {VARIABLE black_potions_$sxc_side 0}
     {VARIABLE blue_potions_$sxc_side 0}
     {VARIABLE brown_potions_$sxc_side 0}
@@ -1865,6 +1866,7 @@ before you leave the selected shop section.</span>
       {VARIABLE ranged_strikes_gold 0}
       {VARIABLE health_points_gold 0}
       {VARIABLE movement_points_gold 0}
+      {VARIABLE vision_points_gold 0}
       [while]
         {SXC_CMP finished_sub equals no}
         [do]
@@ -1901,6 +1903,7 @@ before you leave the selected shop section.</span>
           {VARIABLE str_price_3ranged "$($str_price_ranged * 3 + 15)"}
           {VARIABLE str_left_melee "$(12 - $melee_strikes_$side_number)"}
           {VARIABLE str_left_ranged "$(12 - $ranged_strikes_$side_number)"}
+          {VARIABLE vision_price "$($difficulty - 20)"}
           {VARIABLE text_about_range ""}
           [switch]
             variable=sxc_attack_specialization_$side_number
@@ -2586,6 +2589,61 @@ $text_about_range|"
                 [/if]
               [/command]
             [/option]
+
+            # Vision upgrades are only available on Wesnoth 1.16, so this can be a prototype for using more recent features
+            # of WML. Most of SXC's current code is still compatible with 1.12, so doesn't have [remove_object].
+            [option]
+              [show_if]
+                {SXC_CMP vision_points_gold greater_than 0}
+              [/show_if]
+              image="misc/eye.png"
+              label=_ "<span color='#FF8080'>+$vision_points_gold| gold: Cancel Vision upgrade</span>"
+              [command]
+                [gold]
+                  amount=$vision_points_gold
+                  side=$side_number
+                [/gold]
+                [remove_object]
+                  object_id=sxc_vision_upgrade
+                  x,y=$x1,$y1
+                [/remove_object]
+                {VARIABLE vision_points_gold 0}
+                {VARIABLE vision_upgrades_$side_number 0}
+              [/command]
+            [/option]
+            [option]
+              image="icons/movement.png"
+              label=_ "<span color='#80FF80'>$vision_price| gold: +8 Vision Points</span>"
+              [show_if]
+                {SXC_CMP vision_upgrades_$side_number equals 0}
+              [/show_if]
+              [command]
+                [if]
+                  {SXC_CMP gold greater_than_equal_to $vision_price}
+                  [then]
+                    [gold]
+                      amount=-$vision_price
+                      side=$side_number
+                    [/gold]
+                    [object]
+                      silent=yes
+                      duration=forever
+                      id=sxc_vision_upgrade
+                      take_once_only=no
+                      [effect]
+                        apply_to=vision
+                        increase=8
+                      [/effect]
+                    [/object]
+                    {VARIABLE_OP vision_upgrades_$side_number add 8}
+                    {VARIABLE_OP vision_points_gold add $vision_price}
+                  [/then]
+                [/if]
+              [/command]
+            [/option]
+
+
+
           [/message]
           [redraw]
           [/redraw]
@@ -2618,6 +2676,7 @@ $text_about_range|"
       {CLEAR_VARIABLE ranged_strikes_gold}
       {CLEAR_VARIABLE health_points_gold}
       {CLEAR_VARIABLE movement_points_gold}
+      {CLEAR_VARIABLE vision_points_gold}
       {CLEAR_VARIABLE finished_sub}
       # Update the fog in case vision or movement points have been bought
       {SXC_REDRAW_TERRAIN}
